--- a/index.html
+++ b/index.html
@@ -1,57 +1,79 @@
 <html>
+<head>
+  <meta charset="utf-8">
+  <title>Mein erstes HTML-Dokument</title>
+  <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
+     <img src="profilbild.png" alt="16 mm Film">
 </head>
-  <body>
+<body>
 
- -  <div class="mein-neues-div">
- -    <p>Ein ganz normaler Text.</p>
- -  </div>
- +  <!-- Headlines -->
- +
- +  <h1>Maria<br>Capello</h1><br/>
- +  <h2>Meine Headline</h2>
- +  <h3>Meine Headline</h3>
- +  <h4>Meine Headline</h4>
- +  <h5>Meine Headline</h5>
- +  <h6>Meine Headline</h6>
- +
- +  <!-- Paragraphs -->
- +
- +  <p>Das ist ein ganz normaler Text. Das ist ein ganz normaler Text.<br> Das ist ein ganz normaler Text. Das ist ein ganz normaler Text. Das ist ein ganz normaler Text.</p>
- +
- +  <!-- Lists -->
- +
- +  <ul>
- +    <li>Milch</li>
- +    <li>Butter</li>
- +    <li>Zucker</li>
- +    <li>Brötchen</li>
- +    <li>Haferflocken</li>
- +  </ul>
- +
- +  <ol>
- +    <li>Eins</li>
- +    <li>Zwei</li>
- +    <li>Drei</li>
- +    <li>Vier</li>
- +    <li>Fünf</li>
- +  </ol>
- +
- +  <!-- Zitat -->
- +
- +   <blockquote> 
- +    <p>Das Leben ist voller Leid, Krankheit, Schmerz – und zu kurz ist es übrigens auch ...</p> 
- +    <footer> 
- +      <cite>Woody Allen</cite> 
- +    </footer> 
- +  </blockquote>
- +
- +  <!-- Link -->
- +
- +   <a href="http://www.google.de">Besuche Google</a>
- +
- +  <!-- Image -->
- +
- +  <img src="images/berg.png" alt="Ein Berg">
+  <h1>Maria<br>Capello</h1><br/>
+
+<div class="Schulbildung">
+  <h3>Schulbildung:</h3>
+  <ul>
+    <li>1998 bis 2004
+     <br>Besuch der Grundschule Ecuador und Mexico<br/></li>
+    <li>2004 bis 2008
+     <br>Besuch der Schule Antares Quito- Ecuador<br/></li>
+    <li>2008 bis 2010
+     <br>Besuch der Schule SEK Internacional Quito-Ecuador<br/></li>
+    <li>2010 bis 2011
+     <br>Holzgerlingen Gymnasium (Austausch)<br/></li>
+    <li>2011 bis 2013
+    <br>Besuch der Deustchen Schule Quito
+    Abschluss aus Ecuador (Bachillerato en Ciencias Sociales)<br/></li>
+  </ul>
+</div>
+
+
+  <h3>Ausbildung:</h3>
+    <ul>
+      <li>2015-2016<br>Besuch des Studienkollegs der Freie Universitaet.<br></li>
+    </ul>
+
+
+   <h3>Praktika:</h3>
+     <ul>
+      <li>2012
+       <br>sechswöchiges Praktikum bei dem Verlag TEXT:BAU München.<br/></li>
+      <li>2014
+       <br>viermonatiges Praktikum bei der Produktionsfirma LA OFICINA PRODUCE Quito<br/></li>
+      <li>2014
+       <br>viermonatiges Praktikum bei Pentasiete Art Studio Quito<br/></li>
+      <li>2016
+       <br>dreimonatiges Praktikum bei Sygns Berlin<br/></li>
+     </ul>
+
+
+   <h3>Sprachkenntnisse:</h3>
+     <ol>
+      <li>Englisch fließend (FCE Certificate)</li>
+      <li>Deutsch Deutsches Sprach Diplom zweite Stuffe (C1)</li>
+      <li>Spanisch Muttersprache</li>
+     </ol>
+
+
+   <h3>Sonstiges:</h3>
+     <ul>
+      <li>MS Word, Excel, PowerPoint</li>
+      <li>Autocad</li>
+      <li>ADOBE(CC) InDesign, Illustrator, Photoshop und Lightroom</li>
+      <li>Sketch und Principle</li>
+     <ul>
+
+
+   <blockquote> 
+     <p>Si no hay movimiento no existe vida, si no hay vida no hay acción y si no hay acción se acabó el mundo.Las cosas no están quietas para mí. Siempre tengo la idea de que algo cambia, algo se mueve, algo tirita, como quién diría</p> 
+    <footer> 
+       <cite>Matilde Pérez Cerda</cite> 
+     </footer> 
+   </blockquote>
+
+   <!-- Link -->
+
+   <a href="https://mgcapellows.carbonmade.com">Portfolio</a>
+
 
   </body>
   </html>
