--- a/index.html
+++ b/index.html
@@ -3,77 +3,73 @@
   <meta charset="utf-8">
   <title>Mein erstes HTML-Dokument</title>
   <link href="css/stylesheet.css" rel="stylesheet" type="text/css" />
-     <img src="profilbild.png" alt="16 mm Film">
+  
 </head>
 <body>
+  <main>
+    <header>
+      <h1>Maria<br>Capello</h1>
+      <!--   <img src="profilbild.png" alt="16 mm Film"> -->
+    </header>
 
-  <h1>Maria<br>Capello</h1><br/>
+    <article>
+      <div class="cvbox">
+        <h3>Schulbildung:</h3>
+        <ul class="cvlist">
+          <li><span class="cvtime">1998 bis 2004</span><span class="cvdesc">Besuch der Grundschule Ecuador und Mexico</span></li>
+          <li><span class="cvtime">2004 bis 2008</span><span class="cvdesc">Besuch der Schule Antares Quito- Ecuador</span></li>
+          <li><span class="cvtime">2008 bis 2010</span><span class="cvdesc">Besuch der Schule SEK Internacional Quito-Ecuador</span></li>
+          <li><span class="cvtime">2010 bis 2011</span><span class="cvdesc">Holzgerlingen Gymnasium (Austausch)</span></li>
+          <li><span class="cvtime">2011 bis 2013</span><span class="cvdesc">Besuch der Deustchen Schule Quito Abschluss aus Ecuador (Bachillerato en Ciencias Sociales)</span></li>
+        </ul>
+      </div>
 
-<div class="Schulbildung">
-  <h3>Schulbildung:</h3>
-  <ul>
-    <li>1998 bis 2004
-     <br>Besuch der Grundschule Ecuador und Mexico<br/></li>
-    <li>2004 bis 2008
-     <br>Besuch der Schule Antares Quito- Ecuador<br/></li>
-    <li>2008 bis 2010
-     <br>Besuch der Schule SEK Internacional Quito-Ecuador<br/></li>
-    <li>2010 bis 2011
-     <br>Holzgerlingen Gymnasium (Austausch)<br/></li>
-    <li>2011 bis 2013
-    <br>Besuch der Deustchen Schule Quito
-    Abschluss aus Ecuador (Bachillerato en Ciencias Sociales)<br/></li>
-  </ul>
-</div>
+      <div class="cvbox">
+        <h3>Ausbildung:</h3>
+        <ul class="cvlist">
+          <li><span class="cvtime">2015-2016</span><span class="cvdesc">Besuch des Studienkollegs der Freie Universitaet.</span></li>
+        </ul>
+      </div>
 
+      <div class="cvbox">
+        <h3>Praktika:</h3>
+        <ul class="cvlist">
+          <li><span class="cvtime">2012</span><span class="cvdesc">sechswöchiges Praktikum bei dem Verlag TEXT:BAU München.</span></li>
+          <li><span class="cvtime">2014</span><span class="cvdesc">viermonatiges Praktikum bei der Produktionsfirma LA OFICINA PRODUCE Quito</span></li>
+          <li><span class="cvtime">2014</span><span class="cvdesc">viermonatiges Praktikum bei Pentasiete Art Studio Quito</span></li>
+          <li><span class="cvtime">2016</span><span class="cvdesc">dreimonatiges Praktikum bei Sygns Berlin</span></li>
+        </ul>
+      </div>
 
-  <h3>Ausbildung:</h3>
-    <ul>
-      <li>2015-2016<br>Besuch des Studienkollegs der Freie Universitaet.<br></li>
-    </ul>
+      <div class="cvbox">
+         <h3>Sprachkenntnisse:</h3>
+          <ol class="cvlist">
+            <li><span class="cvdesc">Englisch fließend (FCE Certificate)</span></li>
+            <li><span class="cvdesc">Deutsch Deutsches Sprach Diplom zweite Stuffe (C1)</span></li>
+            <li><span class="cvdesc">Spanisch Muttersprache</span></li>
+          </ol>
+      </div>
 
+      <div class="cvbox">
+        <h3>Sonstiges:</h3>
+         <ul class="cvlist">
+          <li><span class="cvdesc">MS Word, Excel, PowerPoint</span></li>
+          <li><span class="cvdesc">Autocad</span></li>
+          <li><span class="cvdesc">ADOBE (CC) InDesign, Illustrator, Photoshop und Lightroom</span></li>
+          <li><span class="cvdesc">Sketch und Principle</span></li>
+        <ul>
+      </div>
 
-   <h3>Praktika:</h3>
-     <ul>
-      <li>2012
-       <br>sechswöchiges Praktikum bei dem Verlag TEXT:BAU München.<br/></li>
-      <li>2014
-       <br>viermonatiges Praktikum bei der Produktionsfirma LA OFICINA PRODUCE Quito<br/></li>
-      <li>2014
-       <br>viermonatiges Praktikum bei Pentasiete Art Studio Quito<br/></li>
-      <li>2016
-       <br>dreimonatiges Praktikum bei Sygns Berlin<br/></li>
-     </ul>
+    </article>
 
-
-   <h3>Sprachkenntnisse:</h3>
-     <ol>
-      <li>Englisch fließend (FCE Certificate)</li>
-      <li>Deutsch Deutsches Sprach Diplom zweite Stuffe (C1)</li>
-      <li>Spanisch Muttersprache</li>
-     </ol>
-
-
-   <h3>Sonstiges:</h3>
-     <ul>
-      <li>MS Word, Excel, PowerPoint</li>
-      <li>Autocad</li>
-      <li>ADOBE(CC) InDesign, Illustrator, Photoshop und Lightroom</li>
-      <li>Sketch und Principle</li>
-     <ul>
-
-
-   <blockquote> 
-     <p>Si no hay movimiento no existe vida, si no hay vida no hay acción y si no hay acción se acabó el mundo.Las cosas no están quietas para mí. Siempre tengo la idea de que algo cambia, algo se mueve, algo tirita, como quién diría</p> 
     <footer> 
-       <cite>Matilde Pérez Cerda</cite> 
-     </footer> 
-   </blockquote>
-
-   <!-- Link -->
-
-   <a href="https://mgcapellows.carbonmade.com">Portfolio</a>
-
-
+      <blockquote> 
+         <p>Si no hay movimiento no existe vida, si no hay vida no hay acción y si no hay acción se acabó el mundo.Las cosas no están quietas para mí. Siempre tengo la idea de que algo cambia, algo se mueve, algo tirita, como quién diría</p> 
+         <cite>Matilde Pérez Cerda</cite> 
+      </blockquote>
+      <!-- Link -->
+      <a href="https://mgcapellows.carbonmade.com">Portfolio</a>
+    </footer>
+   </main> 
   </body>
   </html>
