--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
 <!-- navigation -->
 <ul class="navigation">
   <li class="Home">
-    <a href="portfolio.html">Home</a>
+    <a href="index.html">Home</a>
   </li>
   <li>
     <a href="work.html">Work</a>
