--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,9 @@
   <a href="https://mgcapellows.carbonmade.com/"> Pictures here </a>
 </div>
 
+<div class="morepictures">
+  <a href="https://500px.com/mgcapellows"> Pictures here </a>
+</div>
 
 
 <body>
