--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 </div>
 
 <div class="morepictures">
-  <a href="https://500px.com/mgcapellows"> Pictures here </a>
+  <a href="https://500px.com/mgcapellows"> more pictures here </a>
 </div>
 
 
